@@ -1,4 +1,5 @@
 const Boom = require('boom')
+const Joi = require('joi')
 const models = require('./item.model')
 
 const Item = () => {}
@@ -11,6 +12,26 @@ Item.getItemsInformations = async (ctx) => {
   }
 
   ctx.body = itemsInformations
+  ctx.status = 200
+}
+
+Item.getCustomersByItemId = async (ctx) => {
+  const schema = Joi.object({
+    id: Joi.number().integer().required()
+  }).required()
+
+  const result = Joi.validate(ctx.params, schema, { abortEarly: false })
+  if (result.error) {
+    throw result.error
+  }
+
+  const customers = await models.getCustomersByItemId(result.value.id)
+
+  if (customers.length === 0) {
+    throw Boom.notFound('no customers found')
+  }
+
+  ctx.body = customers
   ctx.status = 200
 }
 
